--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   hive: ^2.2.3
   intl:
   hive_flutter: ^1.1.0
+  image_picker:
+  cached_network_image: ^3.4.1
 
 
 dev_dependencies:
